package com.cesar.school.core.gamification.vo;

import java.util.UUID;

public record RewardId(UUID value) { }
