@startuml

skinparam componentStyle uml2

package "'Gamification' Aggregate" <<Rectangle>> {
	class Score <<(A,#fffab8) Aggregate Root>> {
		int totalPoints
		ScoreId id
		UserId userId
		void addPoints(null null)
	}
	class Reward <<(A,#fffab8) Aggregate Root>> {
		String name
		String null
		int requiredPoints
		RewardId id
	}
	class Achievement <<(A,#fffab8) Aggregate Root>> {
		String name
		String null
		AchievementId id
	}
	class Ranking <<(A,#fffab8) Aggregate Root>> {
		List<ScoreId> topScores
		Date lastUpdated
		ScoreId newTopScores
		RankingId id
		void updateRanking(null null)
	}
	class UserId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class ScoreId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class RewardId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class AchievementId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class RankingId <<(V,DarkSeaGreen) Value Object>> {
		int id
	}
	class GamificationService <<(S,DarkSeaGreen) Service>> {
		void registerPoints(UserId userId, null null)
		void unlockAchievement(UserId userId, AchievementId achievementId)
		void updateRanking(UserId userId)
	}
}
Reward --> RewardId : id
Achievement --> AchievementId : id
Score --> UserId : userId
Score --> ScoreId : id
Ranking --> RankingId : id
legend left
  This bounded context implements the subdomain 'Gamification'.
end legend


@enduml
